deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mini-wms
  labels:
    app.kubernetes.io/name:    mini-wms
    app.kubernetes.io/version: "2.0.0"
