deploy/k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mini-wms-redis
  namespace: mini-wms
  labels:
    app:     mini-wms-redis
    version: "2.0.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mini-wms-redis
  template:
    metadata:
      labels:
        app: mini-wms-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          imagePullPolicy: IfNotPresent
          command: ["redis-server", "--save", "60", "1", "--loglevel", "warning"]
          ports:
            - containerPort: 6379
          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 15
            periodSeconds: 30
            failureThreshold: 3
          resources:
            requests:
              memory: "64Mi"
              cpu:    "50m"
            limits:
              memory: "128Mi"
              cpu:    "200m"
